--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -11,18 +11,17 @@
 		<div class="col-md-4">
 			<h2>{% trans "Profile" %}</h2>
 			<h3 id="appearance">{% trans "Appearance" %}</h3>
-			<form role=form" method="post" action="{{filename}}?change-appearance">
-				<div class="form-group">
-					<label for="username">{% trans "Username" %}</label>
-					<input type="text" class="form-control" name="username" id="username" value="{{username}}" required disabled>
-				</div>
-				<div class="form-group">
-					<div class="alert alert-warning">{% trans "Contact us to change your username." %}</div>
-				</div>
-			</form>
+			<div class="form-group">
+				<label for="username">{% trans "Username" %}</label>
+				<input type="text" class="form-control" name="username" id="username" value="{{username}}" required disabled>
+			</div>
+			<div class="form-group">
+				<div class="alert alert-warning">{% trans "Contact us to change your username." %}</div>
+			</div>
 			<h3 id="profiles">{% trans "Linked profiles" %}</h3>
 		{% include 'functions/alert.twig' with {'selector' : 'profiles'} %}
 			<form role=form" method="post" action="{{filename}}?change-profiles">
+				<input type="hidden" name="state" value="{{state}}">
 				<div class="form-group">
 					<label for="clonkforge">{% trans "Clonk Forge profile" %}</label>
 					<input type="url" class="form-control" name="clonkforge" id="clonkforge" value="{{clonkforge}}" placeholder="{{clonkforge_placeholder}}">
@@ -41,6 +40,7 @@
 			<h3 id="contact">{% trans "Contact details" %}</h3>
 		{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
 			<form role=form" method="post" action="{{filename}}?change-contact">
+				<input type="hidden" name="state" value="{{state}}">
 				<div class="form-group">
 					<label for="email">{% trans "Email address" %}</label>
 					<input type="email" class="form-control" name="email" id="email" value="{{email}}" required{% if focus_email %} autofocus{% endif %}>
@@ -51,6 +51,7 @@
 			</form>
 			<h3 id="language">{% trans "Language" %}</h3>
 			<form role=form" method="post" action="{{filename}}?change-language">
+				<input type="hidden" name="state" value="{{state}}">
 				<div class="form-group">
 					<label for="language-setting">{% trans "View site in" %}</label>
 					<select name="language" id="language-setting" required>
@@ -68,6 +69,7 @@
 			<p><a href="#remove-account" data-toggle="collapse" data-target="#remove-account-confirm">{% trans %}Would you like to remove your account?{% endtrans %}</a></p>
 			<div class="collapse" id="remove-account-confirm">
 				<form role="form" method="post" action="{{filename}}?remove-account">
+				<input type="hidden" name="state" value="{{state}}">
 					<div class="alert alert-danger">
 						<strong>{% trans %}Removing your account is final.{% endtrans %}</strong> {% trans %}You will permanently loose control of all your uploaded addons.{% endtrans %}
 					</div>
@@ -85,6 +87,7 @@
 			<h3 id="password">{% trans "Password" %}</h3>
 			{% include 'functions/alert.twig' with {'selector' : 'password'} %}
 			<form role=form" method="post" id="form-password" action="{{filename}}?change-password">
+				<input type="hidden" name="state" value="{{state}}">
 				{% if password_exists %}
 				<div class="form-group">
 					<label for="password-old">{% trans "Old password" %}</label>
@@ -104,10 +107,11 @@
 				</div>
 			</form>
 			<h3 id="remote-logout">{% trans "Sessions" %}</h3>
-				{% include 'functions/alert.twig' with {'selector' : 'remote-logout'} %}
+			{% include 'functions/alert.twig' with {'selector' : 'remote-logout'} %}
 			<p><a href="#remote-logout" data-toggle="collapse" data-target="#remote-logout-confirm">{% trans %}Would you like to log out of all other devices?{% endtrans %}</a></p>
 			<div class="collapse" id="remote-logout-confirm">
 				<form method="post" action="{{filename}}?remote-logout" role=form">
+					<input type="hidden" name="state" value="{{state}}">
 					<button type="submit" class="btn btn-info">{% trans "Log out all other devices" %}</button>
 				</form>
 			</div>
